convert fabric build to kts and fix config cache